<resources>
    <string name="app_name">avaliacao-pratica</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contacts_note_form">ContactsNoteForm</string>
    <string name="lbl_name">Name</string>
    <string name="msg_required">Required Fields</string>
    <string name="Loading">Loading...</string>
    <string name="msg_save_success">saved successfully</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_phone">Phone Namber</string>
    <string name="lbl_add">Add</string>
    <string name="title_activity_phone_form">PhoneFormActivity</string>
    <string name="lbl_email">Email</string>
</resources>
